<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="40dp"
            android:text="@string/pizza_time"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- CAMPO NOMBRE USUARIO-->
    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="Nombre: "/>
        <TextView
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="nombreusuario"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Añade NombreUsuario"
        android:layout_marginLeft="90dp"/>
    <!--<EditText
        android:id="@+id/nombreUsuario"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nombrePedido"

        />
-->
    <!-- IMAGENES PIZZA-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:background="@android:color/white"
            android:id="@+id/btnCarbonara"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/images" />

        <ImageButton
            android:background="@android:color/white"
            android:id="@+id/btnRomana"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/images2" />

        <ImageButton
            android:background="@android:color/white"
            android:id="@+id/btnBarbacoa"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/barbacoa" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/EstiloTexto"
            android:layout_marginLeft="25dp"
            android:text="@string/carbonara" />

        <TextView
            style="@style/EstiloTexto"
            android:layout_marginLeft="42dp"
            android:text="@string/romana" />

        <TextView
            style="@style/EstiloTexto"
            android:layout_marginLeft="50dp"
            android:text="@string/barbacoa" />

    </LinearLayout>

    <!--Fotos Bebida-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <ImageButton
            android:padding="5dp"
            android:background="@android:color/white"
            android:id="@+id/btnCocaCola"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/cocacola" />

        <ImageButton
            android:padding="10dp"
            android:background="@android:color/white"
            android:id="@+id/btnAgua"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="170dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/agua" />

    </LinearLayout>

    <!--Texto Bebida-->
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/EstiloTexto"
            android:layout_marginLeft="25dp"
            android:text="@string/coca_cola" />

        <TextView
            style="@style/EstiloTexto"
            android:layout_marginLeft="170dp"
            android:text="@string/agua" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/EstiloTexto"
            android:layout_width="240dp"
            android:layout_height="30dp"

            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/elegir_cantidad_porciones" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnMenos"
                style="@style/EstiloBotones"
                android:layout_marginLeft="70dp"
                android:text="-" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:text="1"
                android:width="40dp"
                android:textSize="30dp"
                android:id="@+id/txtvcantidad"
                />

            <Button
                android:id="@+id/btnMas"
                style="@style/EstiloBotones"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/EstiloTexto"
                android:layout_marginTop="20dp"
                android:text="@string/precio_total" />

            <TextView
                android:id="@+id/txvprecioTotal"
                style="@style/EstiloTexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/precio"
                android:textSize="25dp"
                android:textStyle="normal"

                />

            <Button
                style="@style/EstiloBotones"
                android:layout_width="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="#388E3C"
                android:id="@+id/Añadir"
                android:text="Añadir" />
<!--            android:id="@+id/btnEnviar"-->



        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/listar"
                android:layout_width="80dp"
                style="@style/EstiloBotones"
                android:text="listar"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/pagarPedidos"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                style="@style/EstiloBotones"
                android:text="Pagar"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>